--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -15,12 +15,13 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     GhStats
-                     , Main
+                     , GhStats.Main
   build-depends:       base >=4.11 && <4.12
                      , bytestring == 0.10.*
                      , github == 0.19
                      , lens == 4.16.*
                      , sv == 1.2.*
+                     , text == 1.2.*
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
