--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -31,6 +31,7 @@ executable gh-stats
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.11 && <4.12
+                     , gh-stats
   hs-source-dirs:      exe
   default-language:    Haskell2010
   ghc-options:         -Wall
