--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -18,9 +18,9 @@ library
                      , GhStats.Main
   build-depends:       base >=4.11 && <4.12
                      , bytestring == 0.10.*
-                     , github == 0.19
-                     , lens == 4.16.*
-                     , sv == 1.2.*
+                     , github >= 0.19 && <0.22
+                     , lens == 4.17.*
+                     , sv == 1.3.*
                      , text == 1.2.*
   hs-source-dirs:      src
   default-language:    Haskell2010
