--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -23,6 +23,7 @@ library
                      , optparse-applicative == 0.14.*
                      , sv == 1.3.*
                      , text == 1.2.*
+                     , time == 1.8.*
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
