--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -20,6 +20,7 @@ library
                      , bytestring == 0.10.*
                      , github >=0.22 && <0.23
                      , lens == 4.17.*
+                     , mtl >=2.2 && <2.3
                      , optparse-applicative == 0.14.*
                      , sv == 1.3.*
                      , text == 1.2.*
