--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -25,6 +25,7 @@ library
                      , sv == 1.3.*
                      , text == 1.2.*
                      , time == 1.8.*
+                     , vector >=0.12 && <0.13
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
