--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -15,13 +15,18 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     GhStats
+                     , GhStats.Db
                      , GhStats.Main
+                     , GhStats.Types
   build-depends:       base >=4.11 && <4.13
                      , bytestring == 0.10.*
                      , github >=0.22 && <0.23
+                     , http-client >=0.5 && <0.6
                      , lens == 4.17.*
                      , mtl >=2.2 && <2.3
                      , optparse-applicative == 0.14.*
+                     , sqlite-simple >=0.4 && <0.5
+                     , sqlite-simple-errors >=0.6 && <0.7
                      , sv == 1.3.*
                      , text == 1.2.*
                      , time == 1.8.*
