--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -1,9 +1,11 @@
+cabal-version:       2.2
+
 name:                gh-stats
 version:             0.1.0.0
 synopsis:            Pull Github stats for an organisation and its repos
 -- description:
 homepage:            https://qfpl.io
-license:             BSD3
+license:             BSD-3-Clause
 license-file:        LICENSE
 author:              Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
 maintainer:          Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
@@ -11,36 +13,52 @@ copyright:           Copyright (c) 2016, Commonwealth Scientific and Industrial 
 category:            Web
 build-type:          Simple
 extra-source-files:  ChangeLog.md
-cabal-version:       >=1.10
+
+common base { build-depends: base >=4.11 && <4.13 }
+common github { build-depends: github >=0.22 && <0.23 }
+common sqlite-simple { build-depends: sqlite-simple >=0.4 && <0.5 }
 
 library
-  exposed-modules:     GhStats
-                     , GhStats.Db
-                     , GhStats.Main
-                     , GhStats.Types
-  build-depends:       base >=4.11 && <4.13
-                     , bytestring == 0.10.*
-                     , github >=0.22 && <0.23
+  import:              base
+                     , github
+                     , sqlite-simple
+
+  build-depends:
+                       bytestring == 0.10.*
                      , http-client >=0.5 && <0.6
                      , lens == 4.17.*
                      , mtl >=2.2 && <2.3
                      , optparse-applicative == 0.14.*
-                     , sqlite-simple >=0.4 && <0.5
                      , sqlite-simple-errors >=0.6 && <0.7
                      , sv == 1.3.*
                      , text == 1.2.*
                      , time == 1.8.*
                      , vector >=0.12 && <0.13
+
+  exposed-modules:     GhStats
+                     , GhStats.Db
+                     , GhStats.Main
+                     , GhStats.Types
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
 
 executable gh-stats
+  import:              base
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.11 && <4.13
-                     , gh-stats
+  build-depends:
+                       gh-stats
   hs-source-dirs:      exe
   default-language:    Haskell2010
   ghc-options:         -Wall
+
+test-suite tasty
+  import:              base
+                     , github
+                     , sqlite-simple
+  main-is:             Main.hs
+  build-depends:
+                       tasty >=1.2 && <1.3
+  type:                exitcode-stdio-1.0
