--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -9,7 +9,7 @@ license:             BSD-3-Clause
 license-file:        LICENSE
 author:              Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
 maintainer:          Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
-copyright:           Copyright (c) 2016, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
+copyright:           Copyright (c) 2019, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
 category:            Web
 build-type:          Simple
 extra-source-files:  ChangeLog.md
@@ -60,5 +60,6 @@ test-suite tasty
                      , sqlite-simple
   main-is:             Main.hs
   build-depends:
-                       tasty >=1.2 && <1.3
+                       gh-stats
+                     , tasty >=1.2 && <1.3
   type:                exitcode-stdio-1.0
