--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -58,8 +58,10 @@ test-suite tasty
   import:              base
                      , github
                      , sqlite-simple
+  hs-source-dirs:      test
   main-is:             Main.hs
   build-depends:
                        gh-stats
                      , tasty >=1.2 && <1.3
   type:                exitcode-stdio-1.0
+  default-language:    Haskell2010
