--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -62,6 +62,8 @@ test-suite tasty
   main-is:             Main.hs
   build-depends:
                        gh-stats
+                     , hedgehog >=0.6 && <0.7
                      , tasty >=1.2 && <1.3
+                     , tasty-hedgehog >=1.0 && <1.1
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
