--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -18,12 +18,14 @@ common base { build-depends: base >=4.11 && <4.13 }
 common github { build-depends: github >=0.22 && <0.23 }
 common sqlite-simple { build-depends: sqlite-simple >=0.4 && <0.5 }
 common mtl { build-depends: mtl >=2.2 && <2.3 }
+common time { build-depends: time >=1.8 && <1.9 }
 
 library
   import:              base
                      , github
                      , mtl
                      , sqlite-simple
+                     , time
 
   build-depends:
                        bytestring == 0.10.*
@@ -33,7 +35,6 @@ library
                      , sqlite-simple-errors >=0.6 && <0.7
                      , sv == 1.3.*
                      , text == 1.2.*
-                     , time == 1.8.*
                      , vector >=0.12 && <0.13
 
   exposed-modules:     GhStats
@@ -60,12 +61,14 @@ test-suite tasty
                      , github
                      , mtl
                      , sqlite-simple
+                     , time
   hs-source-dirs:      test
   main-is:             Main.hs
   other-modules:       GhStats.DbTest
   build-depends:
                        gh-stats
                      , hedgehog >=1.0 && <1.1
+                     , mmorph >=1.1 && <1.2
                      , tasty >=1.2 && <1.3
                      , tasty-hedgehog >=1.0 && <1.1
   type:                exitcode-stdio-1.0
