--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -67,7 +67,8 @@ test-suite tasty
   other-modules:       GhStats.DbTest
                      , GhStats.Test
   build-depends:
-                       gh-stats
+                       directory >=1.3 && <1.4
+                     , gh-stats
                      , hedgehog >=1.0 && <1.1
                      , mmorph >=1.1 && <1.2
                      , tasty >=1.2 && <1.3
