Update type stuff and refactor referrer stuff.
Referrer stuff is the same shape as paths, so make it generic with a phantom
type to slot in paths easily.

--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -39,6 +39,7 @@ library
 
   exposed-modules:     GhStats
                      , GhStats.Db
+                     , GhStats.Db.Types
                      , GhStats.Main
                      , GhStats.Types
   hs-source-dirs:      src
