--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -18,6 +18,7 @@ common base { build-depends: base >=4.11 && <4.13 }
 common github { build-depends: github >=0.22 && <0.23 }
 common sqlite-simple { build-depends: sqlite-simple >=0.4 && <0.5 }
 common mtl { build-depends: mtl >=2.2 && <2.3 }
+common text { build-depends: text >=1.2  && <1.3 }
 common time { build-depends: time >=1.8 && <1.9 }
 
 library
@@ -25,6 +26,7 @@ library
                      , github
                      , mtl
                      , sqlite-simple
+                     , text
                      , time
 
   build-depends:
@@ -34,7 +36,6 @@ library
                      , optparse-applicative == 0.14.*
                      , sqlite-simple-errors >=0.6 && <0.7
                      , sv == 1.3.*
-                     , text == 1.2.*
                      , vector >=0.12 && <0.13
 
   exposed-modules:     GhStats
@@ -62,13 +63,15 @@ test-suite tasty
                      , github
                      , mtl
                      , sqlite-simple
+                     , text
                      , time
   hs-source-dirs:      test
   main-is:             Main.hs
   other-modules:       GhStats.DbTest
                      , GhStats.Test
   build-depends:
-                       directory >=1.3 && <1.4
+                       containers >=0.6 && <0.7
+                     , directory >=1.3 && <1.4
                      , gh-stats
                      , hedgehog >=1.0 && <1.1
                      , mmorph >=1.1 && <1.2
