--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -17,6 +17,7 @@ extra-source-files:  ChangeLog.md
 common base { build-depends: base >=4.11 && <4.13 }
 common github { build-depends: github >=0.22 && <0.23 }
 common sqlite-simple { build-depends: sqlite-simple >=0.4 && <0.5 }
+common sqlite-simple-errors { build-depends: sqlite-simple-errors >=0.6 && <0.7 }
 common mtl { build-depends: mtl >=2.2 && <2.3 }
 common text { build-depends: text >=1.2  && <1.3 }
 common time { build-depends: time >=1.8 && <1.9 }
@@ -26,6 +27,7 @@ library
                      , github
                      , mtl
                      , sqlite-simple
+                     , sqlite-simple-errors
                      , text
                      , time
 
@@ -34,7 +36,6 @@ library
                      , http-client >=0.5 && <0.6
                      , lens == 4.17.*
                      , optparse-applicative == 0.14.*
-                     , sqlite-simple-errors >=0.6 && <0.7
                      , sv == 1.3.*
                      , vector >=0.12 && <0.13
 
@@ -63,6 +64,7 @@ test-suite tasty
                      , github
                      , mtl
                      , sqlite-simple
+                     , sqlite-simple-errors
                      , text
                      , time
   hs-source-dirs:      test
