--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -21,9 +21,11 @@ common sqlite-simple-errors { build-depends: sqlite-simple-errors >=0.6 && <0.7 
 common mtl { build-depends: mtl >=2.2 && <2.3 }
 common text { build-depends: text >=1.2  && <1.3 }
 common time { build-depends: time >=1.8 && <1.9 }
+common containers { build-depends: containers >=0.6 && <0.7 }
 
 library
   import:              base
+                     , containers
                      , github
                      , mtl
                      , sqlite-simple
@@ -37,6 +39,7 @@ library
                      , lens == 4.17.*
                      , optparse-applicative == 0.14.*
                      , sv == 1.3.*
+                     , validation >=1 && <1.1
                      , vector >=0.12 && <0.13
 
   exposed-modules:     GhStats
@@ -61,6 +64,7 @@ executable gh-stats
 
 test-suite tasty
   import:              base
+                     , containers
                      , github
                      , mtl
                      , sqlite-simple
@@ -72,8 +76,7 @@ test-suite tasty
   other-modules:       GhStats.DbTest
                      , GhStats.Test
   build-depends:
-                       containers >=0.6 && <0.7
-                     , directory >=1.3 && <1.4
+                       directory >=1.3 && <1.4
                      , gh-stats
                      , hedgehog >=1.0 && <1.1
                      , mmorph >=1.1 && <1.2
