--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -75,6 +75,7 @@ test-suite tasty
   main-is:             Main.hs
   other-modules:       GhStats.DbTest
                      , GhStats.Test
+                     , GhStats.Gens
   build-depends:
                        directory >=1.3 && <1.4
                      , gh-stats
