--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -48,6 +48,8 @@ library
                      , GhStats.Db.Types
                      , GhStats.Main
                      , GhStats.Types
+                     , GitHub.Lens
+  other-modules:       GitHub.Lens.Helpers
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
