--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -23,11 +23,13 @@ common text { build-depends: text >=1.2  && <1.3 }
 common time { build-depends: time >=1.8 && <1.9 }
 common containers { build-depends: containers >=0.6 && <0.7 }
 common vector {build-depends: vector >=0.12 && <0.13 }
+common lens { build-depends: lens >= 4.17 && <4.18 }
 
 library
   import:              base
                      , containers
                      , github
+                     , lens
                      , mtl
                      , sqlite-simple
                      , sqlite-simple-errors
@@ -38,7 +40,6 @@ library
   build-depends:
                        bytestring == 0.10.*
                      , http-client >=0.5 && <0.6
-                     , lens == 4.17.*
                      , optparse-applicative == 0.14.*
                      , sv == 1.3.*
                      , validation >=1 && <1.1
@@ -69,6 +70,7 @@ test-suite tasty
   import:              base
                      , containers
                      , github
+                     , lens
                      , mtl
                      , sqlite-simple
                      , sqlite-simple-errors
