--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -41,6 +41,7 @@ library
                        bytestring == 0.10.*
                      , http-client >=0.5 && <0.6
                      , optparse-applicative == 0.14.*
+                     , servant >=0.16 && <0.17
                      , sv == 1.3.*
                      , validation >=1 && <1.1
 
@@ -49,6 +50,7 @@ library
                      , GhStats.Db.Types
                      , GhStats.Main
                      , GhStats.Types
+                     , GhStats.Web
                      , GitHub.Lens
   other-modules:       GitHub.Lens.Helpers
   hs-source-dirs:      src
