--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -40,8 +40,11 @@ library
   build-depends:
                        bytestring == 0.10.*
                      , http-client >=0.5 && <0.6
+                     , lucid >=2.9 && <2.10
                      , optparse-applicative == 0.14.*
                      , servant >=0.16 && <0.17
+                     , servant-lucid >=0.9 && <0.10
+                     , servant-server >=0.16 && <0.17
                      , sv == 1.3.*
                      , validation >=1 && <1.1
 
