--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -47,6 +47,7 @@ library
                      , servant-server >=0.16 && <0.17
                      , sv == 1.3.*
                      , validation >=1 && <1.1
+                     , warp >=3.2 && <3.3
 
   exposed-modules:     GhStats
                      , GhStats.Db
