--- a/gh-stats.cabal
+++ b/gh-stats.cabal
@@ -40,14 +40,15 @@ library
                      , vector
 
   build-depends:
-                       bytestring == 0.10.*
+                       aeson >=1.4 && <1.5
+                     , bytestring >=0.10 && <0.11
                      , http-client >=0.5 && <0.6
                      , lucid >=2.9 && <2.10
-                     , optparse-applicative == 0.14.*
+                     , optparse-applicative >=0.14 && <0.15
                      , servant >=0.16 && <0.17
                      , servant-lucid >=0.9 && <0.10
                      , servant-server >=0.16 && <0.17
-                     , sv == 1.3.*
+                     , sv >=1.3 && <1.4
                      , warp >=3.2 && <3.3
 
   exposed-modules:     GhStats
